--- a/components/navbar.module.scss
+++ b/components/navbar.module.scss
@@ -150,6 +150,7 @@
         .translation{
             background-color: none;
             border: none;
+            cursor: pointer;
         }
     }
 }
