page headers added

--- a/components/layout/footer.module.scss
+++ b/components/layout/footer.module.scss
@@ -1,4 +1,4 @@
-@import "../styles/colors.module.scss";
+@import "../../styles/colors.module.scss";
 
 .footer-wrapper {
     background-color: $navbar;
