--- a/components/layout/navbar.module.scss
+++ b/components/layout/navbar.module.scss
@@ -1,4 +1,4 @@
-@import "../styles/colors.module.scss";
+@import "../../styles/colors.module.scss";
 
 .nav {
     background-color: $navbar;
@@ -15,7 +15,7 @@
 
 .logo {
     text-align: left;
-    width: 50%;
+    width: 70%;
     font-size: 1.2rem;
     
     a {
