--- a/components/layout/footer.module.scss
+++ b/components/layout/footer.module.scss
@@ -17,6 +17,7 @@
     
 
     ul{
+        margin: 0;
         display: flex;
         flex-direction: column;
         padding: 2rem 0rem 0;
@@ -37,6 +38,7 @@
             }
 
             p {
+                margin: 0;
                 padding-left: 0.3rem; 
             }
         }
@@ -59,6 +61,9 @@
     font-size: 0.8rem;
     padding: 0rem 0;
     font-weight: 300;
+    p {
+        margin: 0;
+    }
 }
 
 
@@ -75,14 +80,10 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                font-size: .9rem;
+                font-size: .8rem;
                 padding: 0.5rem 1rem;
             }
         }
-    }
-
-    .hr-footer {
-        width: 350px;
     }
 
     .footer-container {
