--- a/components/rate-table/rates-table.module.scss
+++ b/components/rate-table/rates-table.module.scss
@@ -100,8 +100,12 @@
         margin: 0;
         font-size: 1.1rem;
         color: $text;
-        padding: 1rem 2rem 4rem;
+        padding: 1rem 2rem 0rem;
         text-align: center;
+        &:last-child{
+            padding-bottom: 4rem;
+            padding-top: .5rem;
+        }
     }
 }
 
