--- a/components/carousel/carousel.module.scss
+++ b/components/carousel/carousel.module.scss
@@ -10,6 +10,7 @@
     margin: 1rem 0;
     background-color: black;
     box-shadow: rgba(0, 0, 0, 0.884) 0px 10px 10px -10px;
+    cursor: pointer;
 }
 
 @media screen and (min-width: 1024px){
